# bootcamp

./: .gitignore  BootCamp.sln  BootCamp.sln.nunit  CMakeLists.txt  README.md
BootCamp/: AlphabeticGrouper.cs  BootCamp.csproj  EnvironmentManager.cs  FormAddGame.Designer.cs  FormAddGame.cs  FormAddGame.resx  FormMain.Designer.cs  FormMain.cs  FormMain.resx  Game.cs  GamesManager.cs  Program.cs  app.config
BootCamp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
BootCampSetup/: BootCampSetup.vdproj
BootCampSetup/Emulators/: README
BootCampSetup/Emulators/CCS64/: C64.CFG  CCS64.html  ccs64_list.htm
BootCampSetup/Emulators/Dosbox/: changelog.txt  readme.txt
BootCampTests/: AlphabeticGrouperTests.cs  BootCampTests.csproj  Favorites.cs  GamesTests.cs  MockEnvironmentManager.cs
BootCampTests/Properties/: AssemblyInfo.cs
dependencies/gflags-2.0/: Makefile  config.status  libgflags.la  libgflags.pc  libgflags_nothreads.la  libtool
dependencies/gmock/: CMakeLists.txt
src/: CategoryController.cpp  CategoryController.h  Game.cpp  Game.h  GameController.cpp  GameController.h  Launcher.cpp  Launcher.h  ListFilter.cpp  ListFilter.h  Platform.h  PlatformController.cpp  PlatformController.h  UIManager.cpp  UIManager.h  commandhandler.cpp  commandhandler.h  controller.cpp  controller.h  main.cpp
tests/: CategoryControllerTests.cpp  CommandHandlerTests.cpp  ControllerTests.cpp  GameControllerTests.cpp  GameTests.cpp  ListFilterTests.cpp  PlatformControllerTests.cpp  main.cpp
(+30 files in other folders)
